# aws-api-gateway-mtls

./: .gitignore  .pre-commit-config.yaml  AWS-accounts.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  state.conf
.claude/: settings.local.json
.claude/rules/: lambda.md  linting.md  testing.md
.claude/skills/lambda-bootstrap/: SKILL.md
.github/: GITHUB_OIDC_SETUP.md  README.md
.github/actions/: README.md
.github/actions/configure-aws-env/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: README.md  ca-bootstrap.yml  ca-rotate-clients.yml  ca-rotate-intermediate.yml  claude-code-review.yml  client-provision.yml  ecr-deploy.yml  lambda-build.yml  reusable-setup-terraform.yml  terraform-deploy.yml
ca_operations/: README.md  __init__.py
ca_operations/lib/: __init__.py  ca_manager.py  ca_utils.py  cert_utils.py  certificate_builder.py  config.py  dynamodb_client.py  logging_config.py  models.py  s3_client.py  ssm_client.py
ca_operations/scripts/: __init__.py  bootstrap_ca.py  create_truststore.py  provision_client.py  rotate_client_certs.py  rotate_intermediate_ca.py
ca_operations/tests/: __init__.py  conftest.py  test_ca_manager.py  test_ca_utils.py  test_cert_utils.py  test_certificate_builder.py  test_dynamodb_client.py  test_rotate_client_certs.py  test_rotate_intermediate_ca.py  test_s3_client.py  test_ssm_client.py
clients/: README.md  sandbox.json
diagrams/: basic-flow-aws-components.excalidraw  ca-client-provisioning.excalidraw  lambdas-business-logic.excalidraw
docs/: CLOUDWATCH_INSIGHTS_QUERY.md  PERFORMANCE.md  intermediate-ca-rotation-strategy.md
lambdas/: .dockerignore  Dockerfile
lambdas/adot/: pyproject.toml
lambdas/authorizer/: pyproject.toml
lambdas/authorizer/src/authorizer/: __init__.py  _types.py  cert_extractor.py  cert_metadata.py  cert_validator.py  event_parser.py  handler.py  jwt_validator.py  responses.py  types.py
lambdas/authorizer/tests/: __init__.py  conftest.py  test_handler.py
lambdas/health/: Dockerfile  pyproject.toml
lambdas/token/: pyproject.toml
makefiles/: api.mk  ca.mk  lambda.mk  terraform.mk
scripts/: curl-mtls.sh
scripts/ralph/: prd.json  progress.txt  prompt.md
terraform/: README.md
terraform/certificate-bootstrap/: providers.tf  terraform.tf  variables.tf
terraform/client-provisioning/: dynamodb.tf  locals.tf  providers.tf  ssm-client-parameters.tf  variables.tf
terraform/ecr/: main.tf  providers.tf  terraform.tf  variables.tf
terraform/environmental/: .terraform.lock.hcl  acm.tf  api-gateway.tf  cognito.tf  custom-domain.tf  data.tf  dynamodb.tf  ecr.tf  iam.tf  lambda-authorizer.tf  lambda-health.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  route53.tf  s3-truststore.tf  ssm-ca-parameters.tf  terraform.tf  variables.tf
(+26 files in other folders)
