[project]
name = "aws-api-gateway-mtls"
version = "0.1.0"
description = "AWS API Gateway HTTP regional endpoint with mTLS enforced"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = []

[dependency-groups]
ca = [
    "cryptography>=44.0.0",
    "python-json-logger>=2.0.7"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0"
]
