[project]
name = "aws-api-gateway-mtls"
version = "0.1.0"
description = "AWS API Gateway HTTP regional endpoint with mTLS enforced"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = []

[dependency-groups]
ca = [
    "boto3>=1.42.20",
    "cryptography>=44.0.0",
    "python-json-logger>=2.0.7"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "pyright>=1.1.391",
    "prek>=0.2.28",
    "boto3-stubs[dynamodb]>=1.42.20",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["ca_operations"]
exclude = ["**/__pycache__", "**/tests"]
