[project]
name = "mtls-authorizer-lambda"
version = "0.1.0"
description = "Custom authorizer Lambda - validates JWT and mTLS cert for API Gateway"
requires-python = ">=3.13"
dependencies = ["PyJWT>=2.10.0", "cryptography>=44.0.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "pyright>=1.1.391", "boto3>=1.42.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authorizer"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]
